feat: Update styling and color palette
Refactors the application's styling and color palette to align with the brand's aesthetic. This includes updating the body background color, text colors, and introducing new color variables for improved consistency and contrast. Additionally, some unused CSS utilities have been removed to streamline the stylesheet.

--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; }
+        body { 
+          font-family: 'Inter', sans-serif; 
+          margin: 0;
+          padding: 0;
+          background-color: #F9F6F0;
+        }
         .font-serif { font-family: 'Playfair Display', serif; }
-
-        /* Custom Scrollbar */
         ::-webkit-scrollbar { width: 4px; }
         ::-webkit-scrollbar-track { background: #1A0F0A; }
         ::-webkit-scrollbar-thumb { background: #D4AF37; border-radius: 10px; }
-
-        /* Utilities */
-        .shadow-3xl {
-          box-shadow: 0 35px 60px -15px rgba(0, 0, 0, 0.6);
-        }
     </style>
 <script type="importmap">
 {
@@ -37,7 +35,7 @@
 }
 </script>
 </head>
-<body class="bg-[#3D261C] text-white overflow-x-hidden antialiased">
+<body class="antialiased">
     <div id="root"></div>
 </body>
 </html>
