--- a/index.html
+++ b/index.html
@@ -37,5 +37,7 @@
 </head>
 <body class="antialiased">
     <div id="root"></div>
+    <!-- This was missing: link to the main JS/TSX file -->
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
