--- a/index.html
+++ b/index.html
@@ -14,30 +14,36 @@
           font-family: 'Inter', sans-serif; 
           margin: 0;
           padding: 0;
-          background-color: #F9F6F0;
+          background-color: #F9F6F0; /* Cream background */
         }
         .font-serif { font-family: 'Playfair Display', serif; }
         ::-webkit-scrollbar { width: 4px; }
         ::-webkit-scrollbar-track { background: #1A0F0A; }
         ::-webkit-scrollbar-thumb { background: #D4AF37; border-radius: 10px; }
+        
+        /* Ensure the root takes full height to prevent layout jumps */
+        #root { min-height: 100vh; }
     </style>
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom": "https://esm.sh/react-dom@^19.2.3",
-    "react-dom/client": "https://esm.sh/react-dom@19.2.3/client",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "lucide-react": "https://esm.sh/lucide-react@0.460.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
 </head>
 <body class="antialiased">
-    <div id="root"></div>
-    <!-- This was missing: link to the main JS/TSX file -->
+    <div id="root">
+        <!-- Initial loading state to diagnose blank page -->
+        <div style="display: flex; justify-content: center; align-items: center; height: 100vh; font-family: sans-serif; color: #3D261C;">
+            <p>Wird geladen...</p>
+        </div>
+    </div>
     <script type="module" src="index.tsx"></script>
 </body>
 </html>
